# mosquito-laser-killer

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
config/: system_config.yaml
docs/: CALIBRATION.md  HARDWARE_PARAMETERS.md  HARDWARE_WIRING.md  PRE_FLIGHT_CHECKLIST.md
src/: main.cpp
src/control/: control_loop.cpp  control_loop.h  coordinate_mapper.cpp  coordinate_mapper.h  firing_controller.cpp  firing_controller.h
src/core/: error.h  print.h  thread_safe_queue.h  types.h
src/hal/: camera_impl.cpp  camera_impl.h  differential_galvo_driver.cpp  differential_galvo_driver.h  gpio_impl.cpp  gpio_impl.h  icamera.h  idac.h  igalvo_driver.h  igpio.h  ilaser.h  ispi.h  laser.cpp  laser.h  mcp4922.cpp  mcp4922.h  spi_impl.cpp  spi_impl.h
src/safety/: arm_switch.cpp  arm_switch.h  bounding_box.cpp  bounding_box.h  config_validator.cpp  config_validator.h  e_stop.cpp  e_stop.h  signal_handler.cpp  signal_handler.h  system_state.cpp  system_state.h  watchdog.cpp  watchdog.h
src/vision/: detector.cpp  detector.h  multi_tracker.cpp  multi_tracker.h  stereo_matcher.cpp  stereo_matcher.h  target_selector.cpp  target_selector.h  tracker.cpp  tracker.h
tests/: CMakeLists.txt
tests/mocks/: mock_camera.h  mock_dac.h  mock_galvo_driver.h  mock_gpio.h  mock_laser.h  mock_spi.h
tests/stress/: test_concurrent_shutdown.cpp  test_frame_flooding.cpp  test_spi_backpressure.cpp  test_watchdog_jitter.cpp
tests/unit/: test_arm_switch.cpp  test_config_validator.cpp  test_control_arm_gating.cpp  test_control_loop.cpp  test_coordinate_mapper.cpp  test_detector.cpp  test_differential_galvo_driver.cpp  test_e_stop.cpp  test_firing_controller.cpp  test_kalman_tracker.cpp  test_mcp4922.cpp  test_multi_tracker.cpp  test_print.cpp  test_safety_guards.cpp  test_signal_handling.cpp  test_stereo_matcher.cpp  test_system_state.cpp  test_target_selector.cpp  test_thread_safe_queue.cpp  test_watchdog.cpp
